...
                        ),
                      const SizedBox(height: 35),
                      SizedBox(
                        width: 164,
                        child: Column(children: <Widget>[
                          MaterialButton(
                            child: const Text("Create a New Game",
                                style: TextStyle(
                                  color: Colors.black,
                                  fontSize: 14,
                                )),
                            onPressed: () {
                              Navigator.of(context)
...
