...
          content: const Text(
            'To schedule games in advance, please log in or sign up for an account. Logged-in users can schedule games and sync them across devices!',
          ),
          actions: [
            TextButton(
              onPressed: () => Navigator.pop(context),
              child: const Text('Cancel'),
            ),
            ElevatedButton(
              onPressed: () {
                Navigator.pop(context);
                Navigator.push(
                  context,
...
        if (activeGames.isNotEmpty) {
          if (!mounted) return;
          final bool? proceed = await showDialog<bool>(
            context: context,
            builder: (BuildContext context) {
              return AlertDialog(
                title: const Text('Warning'),
                content: const Text(
                    'You already have a game in progress. Starting a new game will put your current game on hold.'),
                actions: [
                  TextButton(
                    onPressed: () => Navigator.pop(context, false),
                    child: const Text('Cancel'),
                  ),
                  TextButton(
                    onPressed: () => Navigator.pop(context, true),
                    child: const Text('Continue'),
                  ),
                ],
              );
            },
          );
          if (proceed != true) return;
...
        '${_selectedPlayers.length} ${_selectedPlayers.length == 1 ? 'player' : 'players'} selected';
    return Scaffold(
      backgroundColor: Colors.white,
      extendBodyBehindAppBar: false,
      resizeToAvoidBottomInset: false,
      appBar: AppBar(
        title: const Text('Create Game'),
      ),
      body: Stack(children: [
        Utilities.backdropImageContinerWidget(),
        Padding(
          padding: const EdgeInsets.all(16.0),
          child: Form(
...
